[metadata]
name = loyverse
version = 0.2.1
author = Matteo Berchier
author_email = maberchier@gmail.com
maintainer = 'Arturo Bruno'
maintainer_email = 'lord.the.gatekeeper@gmail.com'
description = The loyverse package provides a wrapper around the Loyverse API. It is intended to help Loyverse users to access their data using Python, without the need for boilerplate code. Furthermore, the package provides tools to convert the API responses into pandas DataFrames for easier manipulation.
long_description = file: PYPI.md
license = MIT
url = https://github.com/lordn-n/loyverse
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Operating System :: OS Independent
    Intended Audience:: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
keywords =
    expertise
    data warehouse
    common

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    requests
    python-dotenv
    pandas


[flake8]
filename = *.py
exclude =
    .git,
    .github,
    __pycache__,
    .pytest_cache,
    docs,
    loyverse.egg-info,
    venv,
ignore =
    E266
count = True
max-line-length = 120
